style(layout): tweak css to prevent overlapping

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -248,7 +248,6 @@ body {
 }
 
 .DropWrapper {
-  display: flex;
   flex-direction: column;
   align-items: stretch;
 }
