--- a/src/styles/buttons.scss
+++ b/src/styles/buttons.scss
@@ -79,7 +79,7 @@
   @extend .btn;
   @extend .btn-def;
   margin: 0 auto;
-  padding: 0.5rem 1rem;
+  padding: 1rem;
   color: $cb5;
   background: rgba(white, 0.4);
   > i {
